--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ requires = ["flit_core >=3.7.1,<4"]
 
 [project]
 name = "ralf"
-description = "A lightweight library to support the development of applictions using LLMs."
+description = "A lightweight library to support the development of applications using LLMs."
 readme = "README.md"
 # license = "MIT"
 dependencies = [
