--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,24 +3,24 @@ build-backend = "flit_core.buildapi"
 requires = ["flit_core >=3.7.1,<4"]
 
 [project]
-name = "ralf"
+name = "ralf-jhuapl"
 description = "A lightweight library to support the development of applications using LLMs."
 readme = "README.md"
 # license = "MIT"
 dependencies = [
     "openai",
-    # "plotly",
-    # "transformers"
+    "numpy",
+    "PyYAML",
+    "sentence-transformers",
 ]
 dynamic = [
     "version",
 ]
 requires-python = ">=3.9"
+# readme = "README.md"
+# license = {file = "LICENSE"}
 authors = [
-  { name = "Samuel Barham", email = "ralf@jhuapl.edu" },
-  { name = "Arun Reddy", email = "ralf@jhuapl.edu" },
-  { name = "Edward Staley", email = "ralf@jhuapl.edu" },
-
+  { name = "JHUAPL", email = "ralf@jhuapl.edu" },
 ]
 maintainers = [
 ]
@@ -29,3 +29,10 @@ classifiers = [
     "Operating System :: OS Independent",
     "License :: OSI Approved :: MIT License"
 ]
+
+[project.urls]
+Documentation = "https://ralf-test.readthedocs.io/en/latest/"
+Source = "https://github.com/jhuapl-fomo/ralf"
+
+[tool.flit.module]
+name = "ralf"
